--- a/Mining News from MINING.com/styles/main.css
+++ b/Mining News from MINING.com/styles/main.css
@@ -84,6 +84,13 @@ body {
     display: block;
     font-size: .8rem
 }
+.headline .hidden-data { 
+    display: none; 
+}
+.headline .headline-thumbnail { 
+    float: right; 
+    margin-left: 1rem;
+}
 /* /News River Styles
 /* Article Styles */
 .km-listinset { 
